feat: add exception treatment for some exceptions and organizes the services
